--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "nga-blog",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "hexo server",
+    "hexo": "hexo",
+    "deploy": "hexo clean && hexo deploy -g"
+  },
   "hexo": {
-    "version": "3.2.2"
+    "version": "3.3.7"
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-admin": "^2.2.1",
+    "hexo-all-minifier": "^0.1.1",
+    "hexo-autolinker": "^1.0.1",
     "hexo-deployer-git": "^0.1.0",
+    "hexo-deployer-rsync": "^0.1.3",
+    "hexo-filter-pathfix": "^0.1.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-seo-friendly-sitemap": "0.0.21",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-inject": "^1.0.0",
+    "hexo-offline": "^0.2.2",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-tag-easy-charts": "^0.3.1"
   }
 }
